# Navi

./: .gitignore  INSTRUKCJA_PL.md  Makefile  README.md  download_poland_osm.py  process_poland_osm.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  mapping.md  schema.md
examples/: README.md
examples/output/: route.geojson
examples/output/graph/: graph.json
examples/output/nds_like/: addresses.json  manifest.json  metadata.json  poi.json
examples/output/nds_live_poc/: layer_mapping.json  manifest.json
examples/output/nds_live_poc/layers/restrictions/: turn_restrictions.json
examples/output/nds_live_poc/layers/road_network/: segments.json
examples/output/nds_live_poc/layers/topology/: junctions.json
src/navi/: __init__.py
src/navi/cli/: main.py
src/navi/exporters/: nds_like.py  nds_live_poc.py
src/navi/ingest/: __init__.py  osm_parser.py
src/navi/models/: __init__.py  canonical.py  graph.py  raw_osm.py
src/navi/normalize/: canonicalizer.py
src/navi/routing/: graph_builder.py  router.py
src/navi/utils/: io.py  logging.py
src/navi/validators/: validator.py
tests/: test_exporters.py  test_ingest.py  test_normalize.py  test_routing.py  test_validator.py
tests/fixtures/: mini.osm
